exports[`strongIcon > Multiple icons 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
        "raw": "[[me.icon*3]]"
      },
      {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
        "raw": "[[me.icon*3]]"
      },
      {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
        "raw": "[[me.icon*3]]"
      }
    ]
  }
]
`;

exports[`strongIcon > Simple relative strong icon 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
        "raw": "[[me.icon]]"
      }
    ]
  }
]
`;

exports[`strongIcon > Simple root strong icon 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "path": "/icons/+1",
        "pathType": "root",
        "type": "strongIcon",
        "raw": "[[/icons/+1.icon]]"
      }
    ]
  }
]
`;

exports[`strongIcon > Strong icon and internal link on same line 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "link",
        "raw": "[Internal link]",
        "pathType": "relative",
        "href": "Internal link",
        "content": ""
      },
      {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
        "raw": "[[me.icon]]"
      }
    ]
  }
]
`;
